# therook

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
ui/: CMakeLists.txt  EvalBar.qml  PlayerInfo.qml  RoundPane.qml  SidePanel.qml  main.qml  qtquickcontrols2.conf
ui/chess/: CMakeLists.txt
ui/chess/assets/: CMakeLists.txt
ui/chess/js/: BoardView.mjs
ui/chess/qml/: BasePiece.qml  Board.qml  BoardBackground.qml  BoardImpl.qml  CaptureHintRect.qml  DragArea.qml  HighlightRect.qml  HoverRect.qml  PhantomPiece.qml  Piece.qml  Square.qml
ui/chess/rust/: Cargo.toml
ui/chess/rust/src/board_con/: mod.rs
ui/chess/rust/src/board_con/p/: board.rs  mod.rs  signals.rs  slots.rs
ui/disboard/: CMakeLists.txt
ui/disboard/qml/: Board.qml  PromotionWindow.qml
ui/qml/: SidePanel.qml
